feat: add endpoint to retrieve permissions by roles and enhance role management functionality